# ai_artist_detector

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.docker/dev/: Dockerfile  Makefile  entrypoint.sh
.docker/prod/: Dockerfile
.github/workflows/: build_image.yml  code_check.yml
ai_artist_detector/: __init__.py  api_entry.py  cli_entry.py  config.py  constants.py  containers.py  exceptions.py
ai_artist_detector/api/: ai_artists.py  urls.py
ai_artist_detector/cli/: __init__.py  db.py  iimuzyka.py  ingest.py  redis.py  workers.py
ai_artist_detector/data/redis/: verdicts.py
ai_artist_detector/data/sqlite/: connection_manager.py  iimuzyka_ids_mapping.py  iimuzyka_overrides.py  iimuzyka_youtube_music_artist_matches.py  youtube_handles_mapping.py  youtube_music_aliases.py  youtube_search_results.py
ai_artist_detector/domain/: verdict_controller.py  youtube.py
ai_artist_detector/domain/data_source/: explicit.py  iimuzyka_top.py  soul_over_ai.py
ai_artist_detector/lib/: helpers.py  web_helpers.py
config/: local.yaml  uvicorn_logging.ini
scripts/: bump_pyproject.py
